[tool.poetry]
name = "home-api"
version = "0.1.0"
description = ""
authors = ["Theo <theo.development@pm.me>"]
readme = "README.md"
packages = [{include = "home_api"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "==3.2.*"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
